<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TextMadness</string>
    <string name="action_settings">Settings</string>
    <string name="contact_lookup_text">Lookup contact</string>
    <string name="select_word_type">Select a part of speech:</string>
    <string name="main_activity_label">New MadText:</string>
    <string name="type_here">Type Your Text Here!</string>
    <string name="generate_word">Insert Word</string>
    <string name="send_button">Send</string>
    <string name="title_activity_word_select">WordSelect</string>
    <string name="select_share_option">Dare To Share??</string>
    <string name="title_activity_share_options">ShareOptions</string>
    <string name="title_activity_share_options2">ShareOptions2</string>
    <string name="share_info_request_header1">Where do you want your message to go?</string>
    <string name="share_info_text_message">Enter a Phone Number </string>
    <string name="share_info_email_message">Enter an Email Address</string>
    <string name ="share_info_twitter_handle">If you want to Tweet @ someone, enter their handle. If not, just press done!</string>
    <string name="done_button">Done!</string>
    <string name="send_again">Would you like to send this message again?</string>
    <string name="send_again_yes">Yes</string>
    <string name="send_again_no">No</string>
    <string name="rand_button">Swap a Word</string>
    <string name="dirty_words">Only dirty words</string>
    <string name="family_friendly">Family Friendly</string>


</resources>
