<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/send_again"
            android:textColor="@color/teal"
            android:textSize="@dimen/text_header"
            android:gravity="center"
            android:padding="@dimen/text_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/send_again_yes"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:text="@string/send_again_no"
                android:layout_weight=".5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>



            </LinearLayout>
        </LinearLayout>

</RelativeLayout>