<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/text_message_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bunniesarecute.admin.textmadness.ShareOptions.TextMessageNextStepFragment">


    <TextView
        android:id="@+id/share_info_request_header"
        android:text="@string/share_info_request_header1"
        android:layout_marginTop="@dimen/frag_top_margin"
        android:textColor="@color/teal"
        android:textSize="19sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/info_enter_space"
        android:hint="@string/share_info_text_message"
        android:textColorHint="@color/light_teal"
        android:layout_marginTop="@dimen/frag_margin"
        android:layout_below="@+id/share_info_request_header"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button android:id="@+id/contact_lookup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_enter_space"
            android:text="@string/contact_lookup_text"
            android:background="@color/light_grey"
            android:textColor="@color/teal"
            android:layout_marginTop="25dp"
            android:layout_centerInParent="true"
            android:padding="10dp"/>

    <Button
        android:id="@+id/done_button"
        android:layout_below="@+id/contact_lookup_button"
        android:text="@string/done_button"
        android:textColor="@color/teal"
        android:layout_marginTop="@dimen/frag_margin"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
